--- a/collector/otel-collector-config.yaml
+++ b/collector/otel-collector-config.yaml
@@ -37,4 +37,8 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging]
+      exporters: [jaeger]
+    metrics:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [prometheus]
