--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,7 @@
 Flask
 Requests
 backoff == 1.11.1
+pymongo==3.12.1
 opentelemetry-distro==0.36b0
 protobuf~=3.20
 opentelemetry-exporter-otlp-proto-grpc==1.15.0
