--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7-alpine
 WORKDIR /code
 
-RUN apk add --no-cache gcc musl-dev linux-headers
+RUN apk add --no-cache gcc musl-dev linux-headers g++
 
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
