--- a/collector/otel-collector-config.yaml
+++ b/collector/otel-collector-config.yaml
@@ -37,8 +37,4 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [jaeger]
-    metrics:
-      receivers: [otlp]
-      processors: [batch]
-      exporters: [prometheus]
+      exporters: [logging]
