--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,6 +6,9 @@ RUN apk add --no-cache gcc musl-dev linux-headers g++
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
+# Installing Opentelemetry Auto Instrumentation
+RUN opentelemetry-bootstrap --action=install
+
 EXPOSE 5002
 
 COPY . .
