Allow mounting volumes around selinux

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
     image: otel/opentelemetry-collector-contrib:0.55.0
     command: ["--config=/etc/otel-collector-config.yaml", ""]
     volumes:
-      - ./collector/otel-collector-config.yaml:/etc/otel-collector-config.yaml
+      - ./collector/otel-collector-config.yaml:/etc/otel-collector-config.yaml:z
     ports:
       - "1888:1888"   # pprof extension
       - "8888:8888"   # Prometheus metrics exposed by the collector
@@ -58,7 +58,7 @@ services:
   prometheus:
     image: prom/prometheus:latest
     volumes:
-      - ./prometheus/prometheus.yaml:/etc/prometheus/prometheus.yml
+      - ./prometheus/prometheus.yaml:/etc/prometheus/prometheus.yml:z
     ports:
       - "9090:9090"
 
@@ -68,7 +68,7 @@ services:
     image: grafana/grafana:9.0.1
     container_name: grafana-server
     volumes:
-      - ./grafana/grafana.ini:/etc/grafana/grafana.ini
-      - ./grafana/provisioning/:/etc/grafana/provisioning/
+      - ./grafana/grafana.ini:/etc/grafana/grafana.ini:z
+      - ./grafana/provisioning/:/etc/grafana/provisioning/:z
     ports:
       - "3000:3000"
